--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.13.2"
-    - name: Unit test
-      run: |
-        python3 test.py
     - uses: DeterminateSystems/nix-installer-action@main
     - name: Integration test
       run: |
@@ -33,3 +30,7 @@ jobs:
         nvfetchKey=$(mktemp)
         "$exe" dump --coursier-dir "$javaHome/.cache/coursier" --dump-path "$nvfetcherKey"
         nix run '.#nvfetcher' -- -k "$nvfetcherKey"
+        cp -r "$javaHome/.cache/coursier" "$HOME/.cache/coursier"
+    - name: Unit test
+      run: |
+        python3 test.py
