--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,20 +20,4 @@ jobs:
         python-version: "3.13.2"
     - uses: DeterminateSystems/nix-installer-action@main
     - name: Integration test
-      run: |
-        export PATH="$(nix build '.#nvfetcher.out' --print-out-paths --no-link)/bin:$PATH"
-        export PATH="$(nix build '.#mill.out' --print-out-paths --no-link)/bin:$PATH"
-        mill --version
-        ./mill_ivy_fetcher.py --help
-        exe=$(realpath ./mill_ivy_fetcher.py)
-        git clone --depth=1 https://github.com/chipsalliance/chisel.git
-        pushd chisel >/dev/null
-        javaHome=$(mktemp -d)
-        "$exe" fetch --home "$javaHome" --targets "unipublish"
-        nvfetchKey=$(mktemp)
-        "$exe" dump --coursier-dir "$javaHome/.cache/coursier" --dump-path "$nvfetcherKey"
-        nvfetcher -k "$nvfetcherKey"
-        cp -r "$javaHome/.cache/coursier" "$HOME/.cache/coursier"
-    - name: Unit test
-      run: |
-        python3 test.py
+      run: ./test.sh
