WIP add ivy_work_dir
Signed-off-by: Avimitin <dev@avimit.in>

--- a/mill-ivy-fetcher.cabal
+++ b/mill-ivy-fetcher.cabal
@@ -67,6 +67,8 @@ executable mill-ivy-fetcher
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
+    ghc-options: -Wall -O3 -rtsopts -threaded -with-rtsopts=-I0
+
     -- Other library packages from which modules are imported.
     build-depends:
         shake >= 0.19.8,
